# lab-2-algorithms

./: CMakeLists.txt
include/: astar.h  common.h  constants.h  csv_export.h  generate.h  heuristic.h  local.h  local_backtrack.h  masks.h  print.h  report.h  search.h
src/: astar.cpp  common.cpp  csv_export.cpp  generate.cpp  heuristic.cpp  local.cpp  local_backtrack.cpp  main.cpp  print.cpp  report.cpp
test/: BoardTests.cpp
